@@ -24,7 +24,8 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/src/util \
 	-I$(top_srcdir)/src/jnlib \
 	-I$(top_builddir)/src \
-	-I$(top_srcdir)/src
+	-I$(top_srcdir)/src \
+	-I$(top_srcdir)/src/assuan
 
 include $(top_srcdir)/am/cmacros.am
 
